# baichat-py

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
baichat_py/: __init__.py
