[tool.poetry]
name = "baichat-py"
version = "0.2.2"
description = ""
authors = ["0xMRTT <0xMRTT@proton.me>"]
maintainers = ["0xMRTT <0xMRTT@proton.me>"]
readme = "README.md"
packages = [{include = "baichat_py"}]
license = "GPL-3.0-or-later"
homepage = "https://codeberg.org/Bavarder/baichat-py"
documentation = "https://codeberg.org/Bavarder/baichat-py"
keywords = ["openai", "gpt3", "baichat", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
repository = "https://github.com/Bavarder/baichat-py"

[tool.poetry.urls]
"Bug Tracker" = "https://codeberg.org/Bavarder/baichat-py/issues"


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.0"
requests = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "codeberg"
url = "https://codeberg.org/api/packages/Bavarder/pypi"
default = false
secondary = true
